[package]
name = "r-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive", "cargo"] }
csv = "1.1.6"
dirs = "4.0.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
